--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.1
   flutter_svg: ^0.17.4
   intl: ^0.16.1
+  data_tables: ^1.0.3
 
 dev_dependencies:
   flutter_test:
