--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="covid19_project"
+        android:label="COVID-19"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
